Testing function to make plots of lavel properties vs pixel value (slice_plot)

--- a/Messing with Data.ipynb
+++ b/Messing with Data.ipynb
@@ -270,9 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -292,19 +292,74 @@
     "        print 'Please specify a pixel or a wavelength'\n",
     "    if pix != None and wv != None:\n",
     "        print 'Defaulting to pixel value'\n",
+    "        wv = None\n",
+    "    if pix == None and wv != None:\n",
+    "        # Add here some function to convert from pixel to wavelength\n",
+    "        # this surely exists somewhere in apogee\n",
+    "        # For now default to a particular pixel value: 3000\n",
+    "        pix = 3000\n",
     "    data = apread.rcsample()\n",
     "    label, lower, upper = sliceinfo\n",
     "    indx = (data[label]>lower) & (data[label]<upper)\n",
     "    data = data[indx]\n",
     "    specs,hdrs = get_spectra(data)\n",
-    "    plt.figure()\n",
-    "    if isinstance(pix,(int,float)) or isinstance(wv,(int,float)):\n",
+    "    plt.figure(figsize = (10,8))\n",
+    "    if isinstance(pix,(int,float)):\n",
     "        for l in range(len(plotids)):\n",
-    "            plt.subplot(len(plotids),1,l)\n",
-    "            plt.plot(data[plotids[l]],specs[:,pix])\n",
+    "            plt.subplot(len(plotids),1,l+1)\n",
+    "            plt.plot(data[plotids[l]],specs[:,pix],'.')\n",
+    "            smin = min(specs[:,pix])\n",
+    "            smax = max(specs[:,pix])\n",
+    "            if smin != smax:\n",
+    "                plt.ylim(smin-0.1,smax+0.1)\n",
+    "            plt.ylabel('Pixel Value')\n",
+    "            plt.xlabel(plotids[l])\n",
+    "            if l == 0:\n",
+    "                plt.title('Pixel {0}'.format(pix))\n",
+    "    elif isinstance(pix,(list, np.ndarray)):\n",
+    "        for p in range(len(pix)):\n",
+    "            for l in range(len(plotids)):\n",
+    "                plt.subplot2grid((len(plotids),len(pix)),(l,p))\n",
+    "                plt.plot(data[plotids[l]],specs[:,pix[p]],'.')\n",
+    "                smin = min(specs[:,pix[p]])\n",
+    "                smax = max(specs[:,pix[p]])\n",
+    "                if smin != smax:\n",
+    "                    plt.ylim(smin-0.1,smax+0.1)\n",
+    "                plt.ylabel('Pixel Value')\n",
+    "                plt.xlabel(plotids[l])\n",
+    "                if l == 0:\n",
+    "                    plt.title('Pixel {0}'.format(pix[p]))\n",
+    "    plt.tight_layout()\n",
+    "            \n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "slice_plot(['LOGG',2.75,2.80],['METALS','TEFF','ALPHAFE'],pix = [300,6000,2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
