Added histogram plots for residuals

--- a/spectrum_label_fit.ipynb
+++ b/spectrum_label_fit.ipynb
@@ -384,34 +384,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "XTENSION= 'IMAGE   '           / IMAGE extension\n",
-       "BITPIX  =                  -32 / Number of bits per data pixel\n",
-       "NAXIS   =                    1 / Number of data axes\n",
-       "NAXIS1  =                 8575 /\n",
-       "PCOUNT  =                    0 / No Group Parameters\n",
-       "GCOUNT  =                    1 / One Data Group\n",
-       "CRVAL1  =        4.17900000000 /\n",
-       "CDELT1  =    6.00000000000E-06 /\n",
-       "CRPIX1  =                    1 /\n",
-       "CTYPE1  = 'LOG-LINEAR'         /\n",
-       "DC-FLAG =                    1 /"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "res = specs[:,pix] - poly_indep(p,(mdata['TEFF'],mdata['LOGG'],data['METALS']),order = O)\n",
+    "plt.hist(mdata['ALPHAFE'],res)\n",
+    "plt.xlabel('[ALPHA/FE]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['AL_H'])\n",
+    "plt.xlabel('[Al/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['CA_H'])\n",
+    "plt.xlabel('[Ca/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['C_H'])\n",
+    "plt.xlabel('[C/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['FE_H'])\n",
+    "plt.xlabel('[Fe/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['K_H'])\n",
+    "plt.xlabel('[K/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['MG_H'])\n",
+    "plt.xlabel('[Mg/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['MN_H'])\n",
+    "plt.xlabel('[Mn/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['NA_H'])\n",
+    "plt.xlabel('[Na/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['NI_H'])\n",
+    "plt.xlabel('[Ni/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['N_H'])\n",
+    "plt.xlabel('[N/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['O_H'])\n",
+    "plt.xlabel('[O/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['SI_H'])\n",
+    "plt.xlabel('[Si/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['S_H'])\n",
+    "plt.xlabel('[S/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['TI_H'])\n",
+    "plt.xlabel('[Ti/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(mdata['V_H'])\n",
+    "plt.xlabel('[V/H]')\n",
+    "plt.ylabel('Residual Value')"
+   ]
   },
   {
    "cell_type": "code",
