Introduction of proposal proving to be thorny - this is an unfinished draft

--- a/tex/proposal.tex
+++ b/tex/proposal.tex
@@ -9,17 +9,17 @@
 \author{Natalie Price-Jones, supervised by Professor Jo Bovy}
 
 \begin{abstract}
-Recent spectroscopic surveys have provided abundant data on stars in the Milky Way. We will analyze a subset of data from the APO Galactic Evolution Experiment (APOGEE) survey, in the form of red clump stars. These metal enriched stars offer a complex abundance space to explore, which we will do by investigating spectra directly, rather than derived quantities. This use of the spectra facilitates the characterization of errors and systematic effects.  
+Recent spectroscopic surveys have provided abundant data on stars in the Milky Way. We will analyze a subset of data from the APO Galactic Evolution Experiment (APOGEE) survey, in the form of red clump stars. These metal enriched stars offer a complex abundance space to explore, which we will do by investigating the spectra themselves, rather than derived quantities. This direct use of the spectra facilitates the characterization of errors and systematic effects on absorption features. An understanding of these uncertainties allows the investigation of the multi-dimensional abundance space, which may reveal trends in abundances with stellar age and position throughout the Milky Way.
 
 \end{abstract}
 
 \section{Introduction}
 \label{sec:back}
-A star's history, from its formation environment to its migratory motions, can be traced through its composition. Calculation of elemental abundances from stellar spectra establishes this compositon. However, current methods for calculating these abundances rely on robust theoretical models and complete understand of in uncertainties associated with instrumentation. At present, these methods still exhibit systematic trends with other stellar properties, such as effective temperature $T_{\rm eff}$ or surface gravity $\log(g)$ (CITE). Removing these contaminating effects from abundance calculations may reveal correlations between abundances and stellar age or location within a galaxy. 
+A star's history, from its formation environment to its migratory motions, can be traced through its composition. Calculation of elemental abundances from stellar spectra establishes this compositon. However, current methods for calculating these abundances require robust theoretical models and complete understand of in uncertainties associated with instrumentation. At present, these methods still exhibit systematic trends with other stellar properties, such as effective temperature $T_{\rm eff}$ or surface gravity $\log(g)$ (CITE). Removing these contaminating effects from abundance calculations entirely may reveal statistically significant correlations between abundances and stellar age or location within a galaxy. 
 
-We will employ an alternative method for investigating abundance space (CITE). This method, described in \S\ref{sec:methods}, uses spectra directly, rather than derived quantities. This reduces complexity in calculations of uncertainty, and incorporates and understanding of the systematic effects of additional stellar properties. This will allow the investigation the dimensionality of abundance space for a sample of stars, including probing the siginificance of particular elements and searching out positional trends.
+To this end, we will employ an alternative method for investigating abundance space (CITE). This method, described in \S\ref{sec:methods}, uses spectra directly, rather than derived quantities. This reduces complexity in calculations of uncertainty, and incorporates an understanding of the systematic effects of additional stellar properties. This will allow a more accurate investigation the dimensionality of abundance space for a sample of stars, including probing the relative siginificance of particular elements and searching out positional trends.
 
-Large-volume spectroscopic survey data from the APO Galactic Evolution Experiment (APOGEE) (CITE), the Large Sky Area Multi-Object Fibre Spectroscopic Telescope (LAMOST) (CITE) and upcoming data from the Gaia mission (CITE) will offer rich information about hundreds of thousands of stars. However, even with data reduction pipelines in place, interpreting that volume of data to find meaningful results is challenging. 
+Recent large-volume spectroscopic survey data from the APO Galactic Evolution Experiment (APOGEE) (CITE), the Large Sky Area Multi-Object Fibre Spectroscopic Telescope (LAMOST) (CITE) and upcoming data from the Gaia mission (CITE) will offer rich spectral information about hundreds of thousands of stars. However, even with data reduction pipelines in place, interpreting that volume of data to find meaningful results is challenging. 
 
 %Binning stars with similar abundance values in all elements into mono-abundance populations (MAPs), allows us to find locational trends when stars in the same MAP are located on-sky. 
  
@@ -30,7 +30,7 @@ Large-volume spectroscopic survey data from the APO Galactic Evolution Experimen
 
 \section{Data Set}
 \label{sec:data}
-This work will focus on analysing the spectra of a sample of red clump stars from APOGEE's Data Release 12. These stars are originally selected according to cuts in gravity, effective temperature, and metallicity, and leave us with an initial sample of 19936 stars (BOVY et al 2014). These stars trace, to some extent, the stellar population of the Milky Way through the volume of the APOGEE survey. A star's time in the red clump is short compared to its lifetime, so the sample is biased towards locating younger stars (CITE?). Data on these stars comes in the form of infrared (H-band) spectra covering a wavelength range from 1.514 $\mu$m to 1.696 $\mu$m (with some small nm gaps between detectors). APOGEE's DR12 pipeline provides data on abundances of 15 elements (C, N, O, Na, Mg, Al, Si, S, K, Ca, Ti, V, Mn, Fe, Ni) as well as effective temperature ($T_{\rm eff}$), surface gravity ($\log(g)$), metallicity ($Z$), and alpha-element enhancements ([$\alpha$/Fe]).
+This work will focus on analysing the spectra of a sample of red clump stars from APOGEE's Data Release 12. These stars are selected as belonging to the red clump according to cuts in gravity, effective temperature, and metallicity, and leave us with an initial sample of 19936 stars (BOVY et al 2014). These stars trace, to some extent, the stellar population of the Milky Way through the volume of the APOGEE survey. A star's time in the red clump is short compared to its lifetime, so the sample is biased towards locating younger stars (CITE?). Data on these stars comes in the form of infrared (H-band) spectra covering a wavelength range from 1.514 $\mu$m to 1.696 $\mu$m (with some small nm gaps between detectors). APOGEE's DR12 pipeline provides data on abundances of 15 elements (C, N, O, Na, Mg, Al, Si, S, K, Ca, Ti, V, Mn, Fe, Ni) as well as effective temperature ($T_{\rm eff}$), surface gravity ($\log(g)$), metallicity ($Z$), and alpha-element enhancements ([$\alpha$/Fe]).
 
 \section{Methods}
 \label{sec:methods}
